[package]
name = "xtra-quinn-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtra = "0.5"
quinn = "0.8"
multistream-select = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
rcgen = "0.8"
async-trait = "0.1"
tempfile = "3"
rustls-pemfile = "0.2"
x509-certificate = "0.6"
hex = "0.4"
rustls = { version = "0.20", features = ["quic", "dangerous_configuration"] }
