[package]
name = "xtra-quinn-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtra = "0.5"
quinn = "0.8"
multistream-select = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
ring = "0.16"
base64 = "0.13"
quinn-p2p-config = { path = "./quinn-p2p-config" }

[workspace]
members = ["./quinn-p2p-config"]
